# sportsfunding

./: .gitignore  README.md  SportsFunding.ipynb  download_shapefiles.py  geocode_sportsdata.py  pyproject.toml  scrape-sportsdata.py  scrape_sportsdata.py
data/: 2019-HouseMembersElectedDownload-24310.csv  grants.csv  grants_geocoded.csv  grants_geocoded_missed.csv
notebooks/: map_layers.ipynb
